--- a/proj-rt-files/CMakeLists.txt
+++ b/proj-rt-files/CMakeLists.txt
@@ -1,7 +1,12 @@
-cmake_minimum_required(VERSION 2.6)
-project(ray_tracer)
-add_executable(ray_tracer main.cpp camera.cpp hierarchy.cpp dump_png.cpp flat_shader.cpp parse.cpp phong_shader.cpp plane.cpp reflective_shader.cpp render_world.cpp sphere.cpp box.cpp mesh.cpp)
-target_link_libraries(ray_tracer png)
-if(CMAKE_COMPILER_IS_GNUCXX)
-    add_definitions(-std=c++11)
-endif()
+cmake_minimum_required(VERSION 3.15)
+project(Raytracer)
+
+set(CMAKE_CXX_STANDARD 11)
+SET(CMAKE_BUILD_TYPE "Debug")
+SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O3 -Wall -g")
+aux_source_directory(. SRCS)
+include_directories(/usr/include/libpng12)
+link_directories(/usr/local/lib)
+set (EXTRA_LIBS ${EXTRA_LIBS} png)
+add_executable(Raytracer ${SRCS})
+target_link_libraries (Raytracer  ${EXTRA_LIBS})
